[workspace]
members = [
    "bin/host",
    "bin/eth-proofs",
    "crates/executor/guest",
    "crates/executor/host",
    "crates/mpt",
    "crates/primitives",
    "crates/provider",
    "crates/storage/rpc-db",
    "crates/storage/witness-db",
]
exclude = []
resolver = "2"

[workspace.package]
edition = "2021"
exclude = ["**/target"]
version = "0.1.0"

[workspace.dependencies]
tracing = { version = "0.1.40", default-features = false }
cfg-if = "1.0.0"
spin = { version = "0.9.8", features = ["mutex"] }
async-trait = "0.1.80"
tokio = { version = "1.21", default-features = false, features = [
    "rt",
    "rt-multi-thread",
] }
reqwest = "0.12.9"
serde_json = "1.0.94"
serde = { version = "1.0", default-features = false, features = ["derive"] }
futures = "0.3"
url = "2.3"
thiserror = "1.0.61"
hex-literal = "0.4.1"
rayon = "1.10.0"
rlp = "0.5.2"

# workspace
rpc-db = { path = "./crates/storage/rpc-db" }
witness-db = { path = "./crates/storage/witness-db" }
guest-executor = { path = "./crates/executor/guest" }
host-executor = { path = "./crates/executor/host" }
mpt = { path = "./crates/mpt" }
primitives = { path = "./crates/primitives" }
provider = { path = "./crates/provider" }

# zkMIPS
zkm-build = { git = "https://github.com/zkMIPS/zkMIPS" }
zkm-core-executor = { git = "https://github.com/zkMIPS/zkMIPS" }
zkm-prover = { git = "https://github.com/zkMIPS/zkMIPS" }
zkm-sdk = { git = "https://github.com/zkMIPS/zkMIPS" }

# zkm-build = { path = "../zkMIPS/crates/build" }
# zkm-core-executor = { path = "../zkMIPS/crates/core/executor" }
# zkm-prover = { path = "../zkMIPS/crates/prover" }
# zkm-sdk = { path = "../zkMIPS/crates/sdk" }

# reth
reth-primitives-traits = { git = "https://github.com/zkMIPS-patches/reth", branch = "patch-1.3.10-goat", default-features = false }
reth-consensus = { git = "https://github.com/zkMIPS-patches/reth", branch = "patch-1.3.10-goat", default-features = false }
reth-evm = { git = "https://github.com/zkMIPS-patches/reth", branch = "patch-1.3.10-goat", default-features = false }
reth-evm-ethereum = { git = "https://github.com/zkMIPS-patches/reth", branch = "patch-1.3.10-goat", default-features = false }
reth-optimism-evm = { git = "https://github.com/zkMIPS-patches/reth", branch = "patch-1.3.10-goat", default-features = false }
reth-optimism-primitives = { git = "https://github.com/zkMIPS-patches/reth", branch = "patch-1.3.10-goat", default-features = false }
reth-storage-errors = { git = "https://github.com/zkMIPS-patches/reth", branch = "patch-1.3.10-goat", default-features = false }
reth-trie = { git = "https://github.com/zkMIPS-patches/reth", branch = "patch-1.3.10-goat", default-features = false }
reth-chainspec = { git = "https://github.com/zkMIPS-patches/reth", branch = "patch-1.3.10-goat", default-features = false }
reth-optimism-chainspec = { git = "https://github.com/zkMIPS-patches/reth", branch = "patch-1.3.10-goat", default-features = false }
reth-execution-types = { git = "https://github.com/zkMIPS-patches/reth", branch = "patch-1.3.10-goat", default-features = false }
reth-errors = { git = "https://github.com/zkMIPS-patches/reth", branch = "patch-1.3.10-goat", default-features = false }
reth-ethereum-consensus = { git = "https://github.com/zkMIPS-patches/reth", branch = "patch-1.3.10-goat", default-features = false }
reth-ethereum-primitives = { git = "https://github.com/zkMIPS-patches/reth", branch = "patch-1.3.10-goat", default-features = false, features = ["serde"] }
reth-optimism-consensus = { git = "https://github.com/zkMIPS-patches/reth", branch = "patch-1.3.10-goat", default-features = false }
reth-optimism-forks = { git = "https://github.com/zkMIPS-patches/reth", branch = "patch-1.3.10-goat", default-features = false }

# reth-primitives-traits = { path = "../patch/reth/crates/primitives-traits", default-features = false }
# reth-consensus = { path = "../patch/reth/crates/consensus/consensus", default-features = false }
# reth-evm = { path = "../patch/reth/crates/evm", default-features = false }
# reth-evm-ethereum = { path = "../patch/reth/crates/ethereum/evm", default-features = false }
# reth-optimism-evm = { path = "../patch/reth/crates/optimism/evm", default-features = false }
# reth-optimism-primitives = { path = "../patch/reth/crates/optimism/primitives", default-features = false }
# reth-storage-errors = { path = "../patch/reth/crates/storage/errors", default-features = false }
# reth-trie = { path = "../patch/reth/crates/trie/trie", default-features = false }
# reth-chainspec = { path = "../patch/reth/crates/chainspec", default-features = false }
# reth-optimism-chainspec = { path = "../patch/reth/crates/optimism/chainspec", default-features = false }
# reth-execution-types = { path = "../patch/reth/crates/evm/execution-types", default-features = false }
# reth-errors = { path = "../patch/reth/crates/errors", default-features = false }
# reth-ethereum-consensus = { path = "../patch/reth/crates/ethereum/consensus", default-features = false }
# reth-ethereum-primitives = { path = "../patch/reth/crates/ethereum/primitives", default-features = false, features = ["serde"] }
# reth-optimism-consensus = { path = "../patch/reth/crates/optimism/consensus", default-features = false }
# reth-optimism-forks = { path = "../patch/reth/crates/optimism/hardforks", default-features = false }

# revm
revm = { git = "https://github.com/zkMIPS-patches/revm", branch = "patch-22.0.0-goat", features = [
    "serde",
    "kzg-rs",
], default-features = false }
revm-bytecode = { git = "https://github.com/zkMIPS-patches/revm", branch = "patch-22.0.0-goat", default-features = false }
revm-state = { git = "https://github.com/zkMIPS-patches/revm", branch = "patch-22.0.0-goat", default-features = false }
revm-primitives = { git = "https://github.com/zkMIPS-patches/revm", branch = "patch-22.0.0-goat", features = [
    "serde",
], default-features = false }
revm-interpreter = { git = "https://github.com/zkMIPS-patches/revm", branch = "patch-22.0.0-goat", default-features = false }
revm-precompile = { git = "https://github.com/zkMIPS-patches/revm", branch = "patch-22.0.0-goat", default-features = false }
revm-database-interface = { git = "https://github.com/zkMIPS-patches/revm", branch = "patch-22.0.0-goat", default-features = false }
op-revm = { git = "https://github.com/zkMIPS-patches/revm", branch = "patch-22.0.0-goat", default-features = false }
revm-inspectors = { git = "https://github.com/zkMIPS-patches/revm-inspectors", branch = "patch-0.19.0-goat" }

# revm = { path = "../patch/revm/crates/revm", features = [
#     "serde",
#     "kzg-rs",
# ], default-features = false }
# revm-bytecode = { path = "../patch/revm/crates/bytecode", default-features = false }
# revm-state = { path = "../patch/revm/crates/state", default-features = false }
# revm-primitives = { path = "../patch/revm/crates/primitives", features = [
#     "serde",
# ], default-features = false }
# revm-interpreter = { path = "../patch/revm/crates/interpreter", default-features = false }
# revm-precompile = { path = "../patch/revm/crates/precompile", default-features = false }
# revm-database-interface = { path = "../patch/revm/crates/database/interface", default-features = false }
# op-revm = { path = "../patch/revm/crates/optimism", default-features = false }
# revm-inspectors = { path = "../patch/revm-inspectors" }

# alloy
alloy-chains = { version = "0.2.0", default-features = false }
alloy-primitives = { version = "1.0.0", default-features = false, features = ["sha3-keccak", "map-foldhash"] }
alloy-rlp = "0.3.10"
alloy-trie = "0.8.1"

alloy-evm = { git = "https://github.com/zkMIPS-patches/evm", branch = "patch-0.4.0-goat", default-features = false }
alloy-provider = { git = "https://github.com/zkMIPS-patches/alloy", branch = "patch-0.14.0-goat", default-features = false, features = [
    "reqwest",
    "reqwest-rustls-tls",
] }
alloy-rpc-types = { git = "https://github.com/zkMIPS-patches/alloy", branch = "patch-0.14.0-goat", default-features = false, features = [
    "eth",
] }
alloy-json-rpc = { git = "https://github.com/zkMIPS-patches/alloy", branch = "patch-0.14.0-goat", default-features = false }
alloy-genesis = { git = "https://github.com/zkMIPS-patches/alloy", branch = "patch-0.14.0-goat", default-features = false }
alloy-consensus = { git = "https://github.com/zkMIPS-patches/alloy", branch = "patch-0.14.0-goat", default-features = false, features = ["serde", "serde-bincode-compat"] }
alloy-network = { git = "https://github.com/zkMIPS-patches/alloy", branch = "patch-0.14.0-goat", default-features = false }
alloy-transport = { git = "https://github.com/zkMIPS-patches/alloy", branch = "patch-0.14.0-goat", default-features = false }
alloy-transport-http = { git = "https://github.com/zkMIPS-patches/alloy", branch = "patch-0.14.0-goat", features = [
    "reqwest-rustls-tls",
], default-features = false }
alloy-transport-ws = { git = "https://github.com/zkMIPS-patches/alloy", branch = "patch-0.14.0-goat" }
alloy-rpc-client = { git = "https://github.com/zkMIPS-patches/alloy", branch = "patch-0.14.0-goat", default-features = false }
alloy-eips = { git = "https://github.com/zkMIPS-patches/alloy", branch = "patch-0.14.0-goat", default-features = false }

# alloy-evm = { path = "../patch/evm/crates/evm", default-features = false }
# alloy-provider = { path = "../patch/alloy/crates/provider", default-features = false, features = [
#     "reqwest",
#     "reqwest-rustls-tls",
# ] }
# alloy-rpc-types = { path = "../patch/alloy/crates/rpc-types", default-features = false, features = [
#     "eth",
# ] }
# alloy-json-rpc = { path = "../patch/alloy/crates/json-rpc", default-features = false }
# alloy-genesis = { path = "../patch/alloy/crates/genesis", default-features = false }
# alloy-consensus = { path = "../patch/alloy/crates/consensus", default-features = false, features = ["serde", "serde-bincode-compat"] }
# alloy-network = { path = "../patch/alloy/crates/network", default-features = false }
# alloy-transport = { path = "../patch/alloy/crates/transport", default-features = false }
# alloy-transport-http = { path = "../patch/alloy/crates/transport-http", features = [
#     "reqwest-rustls-tls",
# ], default-features = false }
# alloy-transport-ws = { path = "../patch/alloy/crates/transport-ws" }
# alloy-rpc-client = { path = "../patch/alloy/crates/rpc-client", default-features = false }
# alloy-eips = { path = "../patch/alloy/crates/eips", default-features = false }

# op
alloy-op-evm = { git = "https://github.com/zkMIPS-patches/evm", branch = "patch-0.4.0-goat", default-features = false }
op-alloy-consensus = { git = "https://github.com/zkMIPS-patches/op-alloy", branch = "patch-0.13.0-goat" }
op-alloy-network = { git = "https://github.com/zkMIPS-patches/op-alloy", branch = "patch-0.13.0-goat" }
op-alloy-rpc-types = { git = "https://github.com/zkMIPS-patches/op-alloy", branch = "patch-0.13.0-goat" }

# alloy-op-evm = { path = "../patch/evm/crates/evm", default-features = false }
# op-alloy-consensus = { path = "../patch/op-alloy/crates/consensus" }
# op-alloy-network = { path = "../patch/op-alloy/crates/network" }
# op-alloy-rpc-types = { path = "../patch/op-alloy/crates/rpc-types" }

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rustdoc.all = "warn"

[patch.crates-io]
# Precompile patches
sha2 = { git = "https://github.com/zkMIPS-patches/RustCrypto-hashes", branch = "patch-sha2-0.10.8", package = "sha2" }
bn = { git = "https://github.com/zkMIPS-patches/bn", branch = "patch-0.6.0", package = "substrate-bn" }
k256 = { git = "https://github.com/zkMIPS-patches/elliptic-curves", branch = "patch-k256-0.13.4" }
p256 = { git = "https://github.com/zkMIPS-patches/elliptic-curves", branch = "patch-p256-0.13.2" }
alloy-primitives-v1-0-0 = { git = "https://github.com/zkMIPS-patches/core.git", package = "alloy-primitives", branch = "patch-alloy-primitives-1.0.0" }
alloy-primitives-v1-1-0 = { git = "https://github.com/zkMIPS-patches/core.git", package = "alloy-primitives", branch = "patch-alloy-primitives-1.1.0" }
alloy-primitives-v1-1-2 = { git = "https://github.com/zkMIPS-patches/core.git", package = "alloy-primitives", branch = "patch-alloy-primitives-1.1.2" }
